# enk

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: crypto.rs  main.rs
