[package]
name = "rhinopuffin"
version = "0.2.0"
edition = "2021"
description = "Simple symmetric encryption."
repository = "https://github.com/ArielHorwitz/rhinopuffin/"
keywords = [
    "encryption",
    "symmetric",
]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
rand = "0.8.5"
sha2 = "0.10.8"
