[package]
name = "enk"
version = "0.3.0"
edition = "2024"
authors = ["Ariel Horwitz <ariel.ninja>", "github.com/pepa65 <pepa65@passchier.net>"]
description = "Simple data en/decryption"
repository = "https://github.com/pepa65/enk"
documentation = "https://docs.rs/enk"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["cli", "encryption", "symmetric"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.16.2"
rand = "0.9.2"
sha2 = "0.10"
